# agentUQ

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  spec.md
docs/: index.mdx  verification_ledger.md
docs/concepts/: acting_on_decisions.md  canonical_vs_realized.md  capability_tiers.md  index.md  policies.md  provider_capabilities.md  public_api.md  reading_results.md  research_grounding.md  segmentation.md  testing.md  tolerance.md  troubleshooting.md
docs/get-started/: index.md  install.md  quickstart.md
docs/maintainers/: index.md  integration_source_review.md  versioning.md
docs/quickstarts/: fireworks.md  gemini.md  index.md  langchain.md  langgraph.md  litellm.md  minimax.md  openai.md  openai_agents.md  openrouter.md  together.md
docs/reference/: adapters.md  config-models.md  integrations.md  results-and-records.md  root-api.md  utilities-and-errors.md
examples/: fireworks_chat.py  gemini_generate_content.py  langchain_wrapper.py  langgraph_tool_agent.py  litellm_completion.py  minimax_chat.py  openai_agents_guard.py  openai_function_call.py  openrouter_tool_call.py  together_chat.py
src/agentuq/: __init__.py  rendering.py  request_params.py
src/agentuq/adapters/: __init__.py  base.py  fireworks.py  gemini.py  langchain.py  litellm.py  minimax.py  openai_agents.py  openai_chat.py  openai_responses.py  openrouter.py  together.py
src/agentuq/analysis/: __init__.py  analyzer.py  events.py  metrics.py  policy.py  segmentation.py
src/agentuq/integrations/: __init__.py  langchain_middleware.py  langgraph_hook.py
src/agentuq/probes/: base.py  litellm_probe.py  openrouter_probe.py
src/agentuq/schemas/: __init__.py  config.py  errors.py  records.py  results.py
src/agentuq/utils/: code_spans.py  sql_parser.py
src/uq_runtime/: __init__.py  rendering.py  request_params.py
src/uq_runtime/adapters/: __init__.py  base.py  fireworks.py  gemini.py  langchain.py  litellm.py  openai_agents.py  openai_chat.py  openai_responses.py  openrouter.py  together.py
tests/: conftest.py  test_adapters.py  test_analyzer_modes.py  test_fail_loud_and_policy.py  test_request_helpers_and_integrations.py  test_segmentation_and_event_edges.py  test_segmentation_and_events.py
tests/contracts/: test_contract_fixtures.py
tests/live/: helpers.py  test_framework_smoke.py  test_provider_smoke.py
tests/unit/: test_adapters.py  test_analyzer_modes.py  test_fail_loud_and_policy.py  test_live_harness.py  test_rendering.py  test_request_helpers_and_integrations.py  test_segmentation_and_event_edges.py  test_segmentation_and_events.py  test_segmentation_rebuild.py  test_sql_parser.py
website/: .gitignore  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts  tsconfig.json
(+32 files in other folders)
